--- a/src/styles.css
+++ b/src/styles.css
@@ -57,18 +57,18 @@ body {
 }
 
 .square {
-  background: #fff;
-  border: 1px solid #999;
+  background: #5B85AA;
+  border: 5px solid #414770;
   float: left;
-  font-size: 24px;
+  font-size: 75px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
+  height: 100px;
+  margin-right: -5px;
+  margin-top: -5px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 100px;
 }
 
 .board-row:after {
@@ -87,4 +87,26 @@ body {
 
 .game-info {
   margin-left: 20px;
+}
+
+.center {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  height:100vh;
+}
+
+.historyButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border: 1px solid #dbdbdb;
+  border-radius: .375em;
+  box-sizing: border-box;
+  color: #363636;
+  cursor: pointer;
+  font-size: 1rem;
+  height: 2.5em;
+  padding: calc(.5em - 1px) 1em;
 }
