--- a/src/styles.css
+++ b/src/styles.css
@@ -110,3 +110,18 @@ body {
   height: 2.5em;
   padding: calc(.5em - 1px) 1em;
 }
+
+.currentHistoryButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #6FC276;
+  border: 1px solid #dbdbdb;
+  border-radius: .375em;
+  box-sizing: border-box;
+  color: #363636;
+  cursor: pointer;
+  font-size: 1rem;
+  height: 2.5em;
+  padding: calc(.5em - 1px) 1em;
+}
